Debugger Working --- Newer Method that can be accessed by all files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,12 @@ add_subdirectory(app)
 
 
 #  Add Debug
- option(BUGGER "debug and use experimental features." ON)
+option(BUGGER "debug and use experimental features." OFF)
 
+if (WITH_DEBUG)
+    MESSAGE(STATUS "WITH_DEBUG")
+    add_definitions(-DUSE_DEBUG)
+endif()
 
 
 # TODO - Add Test
